--- a/menu.html
+++ b/menu.html
@@ -101,15 +101,15 @@
               <a href="#">King Box</a><span> <s>50.455</s> Rp35.909 </span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              2pcs Burger semua varian
             </div>
           </div>
 	  <div class="col-lg-6 menu-item filter-burgerking">
             <div class="menu-content">
-              <a href="#">1pc Ayam + Nasi</a><span> <s>25.000</s> Rp15.000 </span>
+              <a href="#">1set Ayam + Nasi</a><span> <s>25.000</s> Rp15.000 </span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              Potongan 40%
             </div>
           </div>
 	  <div class="col-lg-6 menu-item filter-burgerking">
@@ -117,7 +117,7 @@
               <a href="#">Regular Fries</a><span> <s>8.000</s> Rp6.000 </span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              Potongan 25%
             </div>
           </div>
 	  <div class="col-lg-6 menu-item filter-burgerking">
@@ -125,7 +125,7 @@
               <a href="#">Milo Float</a><span> <s>15.000</s> Rp7.000 </span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              Potongan 45%
             </div>
           </div>
 		  
@@ -145,17 +145,17 @@
               <a href="#">4 Boston Cheese Burger</a><span> <s>200.000</s> Rp84.000 </span>
             </div>
             <div class="menu-ingredients">
-              4 boston cheese burger
+              4pcs Burger
             </div>
           </div>
 
           <!-- HokBen -->
 	  <div class="col-lg-6 menu-item filter-hokben">
             <div class="menu-content">
-              <a href="#">2 Sample Set (Teriyaki + Yakiniku)</a><span> <s>176.000</s> Rp135.000 </span>
+              <a href="#">2 Sample Set</a><span> <s>176.000</s> Rp135.000 </span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              1 set Teriyaki + 1 set Yakiniku
             </div>
           </div>
 	  <div class="col-lg-6 menu-item filter-hokben">
@@ -163,7 +163,7 @@
               <a href="#">Paket A + B + C</a><span> <s>167.500</s> Rp115.500 </span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              2 set Teriyaki + 1 set Yakiniku
             </div>
           </div>
 
@@ -230,10 +230,10 @@
           </div>
 	  <div class="col-lg-6 menu-item filter-xiboba">
             <div class="menu-content">
-              <a href="#">Brown Sugar Boba [Milk Tea + Fresh Milk]</a><span> <s>46.000</s> Rp33.000 </span>
+              <a href="#">2 Brown Sugar Boba</a><span> <s>46.000</s> Rp33.000 </span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              Brown Sugar Boba Milk Tea + Brown Sugar Boba Fresh Milk
             </div>
           </div>
 		
@@ -243,7 +243,7 @@
               <a href="#">Reguler Boneless Rice Set</a><span> <s>30.000</s> Rp21.000 </span>
             </div>
             <div class="menu-ingredients">
-              Regular boneless chicken thigh + 1 rice
+              Regular boneless chicken thigh + nasi
             </div>
           </div>
 	  <div class="col-lg-6 menu-item filter-chigo">
@@ -251,7 +251,7 @@
               <a href="#"> 2 x 3 Pcs Wings Rice Set</a><span> <s>50.454</s> Rp42.000 </span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              2pcs nasi + 3pcs chicken wings
             </div>
           </div>
 	  <div class="col-lg-6 menu-item filter-chigo">
@@ -259,7 +259,7 @@
               <a href="#"> Regular Ice Chocolate</a><span> <s>13.500</s> Rp9.500 </span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              Potongan 30%
             </div>
           </div>
 	  <div class="col-lg-6 menu-item filter-chigo">
@@ -267,7 +267,7 @@
               <a href="#"> Regular Green Tea</a><span> <s>10.000</s> Rp7.200 </span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              Potongan 28%
             </div>
           </div>
 	  <div class="col-lg-6 menu-item filter-chigo">
@@ -275,7 +275,7 @@
               <a href="#"> Regular Lemon Tea</a><span> <s>10.000</s> Rp7.200 </span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              Potongan 28%
             </div>
           </div>
 	  <div class="col-lg-6 menu-item filter-chigo">
@@ -283,7 +283,7 @@
               <a href="#"> Original Fries</a><span> <s>17.500</s> Rp13.500 </span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              Potongan 23%
             </div>
           </div>
 		
@@ -293,7 +293,7 @@
               <a href="#">Pangsit Kuah Frozen</a><span> <s>23.637</s> Rp22.000 </span>
             </div>
             <div class="menu-ingredients">
-              Pangsit isi ayam yang sudah dibekukan, isi 10 pcs + kaldu ayam + sambal
+              10pcs Pangsit isi ayam yang sudah dibekukan + kaldu ayam + sambal
             </div>
           </div>
 	  <div class="col-lg-6 menu-item filter-bakmi">
@@ -301,7 +301,7 @@
               <a href="#">Bakmi Special GM</a><span> <s>33.637</s> Rp24.546 </span>
             </div>
             <div class="menu-ingredients">
-              Bakmi Rebus dengan topping Ayam dan Jamur Saus Spesial GM, Caisim dan Kuah
+              Bakmi Rebus dengan topping Ayam dan Jamur Saus Spesial GM, Caisim, dan Kuah
             </div>
           </div>
 	  <div class="col-lg-6 menu-item filter-bakmi">
@@ -309,7 +309,7 @@
               <a href="#">Pangsit Goreng</a><span> <s>31.819</s> Rp24.546 </span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              Potongan 22%
             </div>
           </div>
 	  <div class="col-lg-6 menu-item filter-bakmi">
@@ -325,7 +325,7 @@
               <a href="#">Bihun Ayam Lada Cha-Cha</a><span> <s>26.364</s> Rp22.000 </span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              Bihun dengan topping ayam giling yang dimasak dengan saus lada ala GM
             </div>
           </div>
 	  <div class="col-lg-6 menu-item filter-bakmi">
@@ -341,7 +341,7 @@
               <a href="#">Ayam Lada Cha-Cha Frozen</a><span> <s>26.364</s> Rp22.000 </span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+               Frozen food ayam lada cha-cha
             </div>
           </div>
 
@@ -351,7 +351,7 @@
               <a href="#">Double Package Deals 1</a><span> <s>217.000</s> Rp140.000 </span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              2 Grilled Chicken Steak + Oreo Fruit Blast + 2 Juice
             </div>
           </div>
 	  <div class="col-lg-6 menu-item filter-abuba">
@@ -359,7 +359,7 @@
               <a href="#">Double Package Deals 2</a><span> <s>220.000</s> Rp145.000 </span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              2 Battered Dory Fish + Oreo Fruit Blast + 2 Juice
             </div>
           </div>
 	  <div class="col-lg-6 menu-item filter-abuba">
@@ -367,7 +367,7 @@
               <a href="#">Double Package Deals 3</a><span> <s>297.000</s> Rp240.000 </span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              2 Sirloin NZ + Oreo Fruit Blast + 2 Juice
             </div>
           </div>
 
@@ -377,35 +377,35 @@
               <a href="#">Promo Muri</a><span> <s>114.000</s> Rp79.000 </span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              2pcs Chicken Double + 2pcs Milkshake
             </div>
           </div>
 
           <!-- Burger Bangor -->
 	  <div class="col-lg-6 menu-item filter-bangor">
             <div class="menu-content">
-              <a href="#">Buy 1 Get 1 [All Burger]</a><span> <s>25.000</s> Rp12.500 </span>
+              <a href="#">Buy 1 Get 1</a><span> <s>25.000</s> Rp12.500 </span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              Semua varian burger
             </div>
           </div>
 
           <!-- Kimukatsu -->
 	  <div class="col-lg-6 menu-item filter-kimu">
             <div class="menu-content">
-              <a href="#">Chicken Katsu Cheese Set</a><span> <s>112.000</s> Rp99.000 </span>
+              <a href="#">Kenyang 1</a><span> <s>112.000</s> Rp99.000 </span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              Chicken Katsu Cheese Set + Spicy Salmon Roll + Ocha
             </div>
           </div>
 	  <div class="col-lg-6 menu-item filter-kimu">
             <div class="menu-content">
-              <a href="#">Beef Original Katsu Set</a><span> <s>115.000</s> Rp99.000 </span>
+              <a href="#">Kenyang 2</a><span> <s>115.000</s> Rp99.000 </span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              Beef Original Katsu Set + Furi Kake Tofu + Ocha
             </div>
           </div>
 
@@ -415,7 +415,7 @@
               <a href="#">Beef Yaki Udon</a><span> <s>35.500</s> Rp25.000 </span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              Potongan 30%
             </div>
           </div>
 	  <div class="col-lg-6 menu-item filter-gokana">
@@ -423,7 +423,7 @@
               <a href="#">Chicken Hot Ramen</a><span> <s>34.500</s> Rp25.000 </span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              Potongan 26%
             </div>
           </div>
 	  <div class="col-lg-6 menu-item filter-gokana">
@@ -431,7 +431,7 @@
               <a href="#">Katsu Bento</a><span> <s>29.000</s> Rp25.000 </span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              Potongan 14%
             </div>
           </div>
 
@@ -441,7 +441,7 @@
               <a href="#">Pint</a><span> <s>290.000</s> Rp145.000 </span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              Potongan 50%
             </div>
           </div>
 	  <div class="col-lg-6 menu-item filter-baskin">
@@ -449,7 +449,7 @@
               <a href="#">Quart</a><span> <s>415.000</s> Rp207.500 </span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              Potongan 50%
             </div>
           </div>
 	  <div class="col-lg-6 menu-item filter-baskin">
@@ -457,25 +457,25 @@
               <a href="#">Half Gallon</a><span> <s>750.000</s> Rp375.000 </span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              Potongan 50%
             </div>
           </div>
 
           <!-- A&W -->
 	  <div class="col-lg-6 menu-item filter-aw">
             <div class="menu-content">
-              <a href="#">6 Aroma Chicken + 1 Mozza Burger</a><span> <s>150.000</s> Rp112.000 </span>
+              <a href="#">Weekend Deal A</a><span> <s>150.000</s> Rp112.000 </span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              6pcs Aroma Chicken + 1pc Mozza Burger
             </div>
           </div>
 	  <div class="col-lg-6 menu-item filter-aw">
             <div class="menu-content">
-              <a href="#">3 Aroma Chicken + 2 Rice</a><span> <s>75.000</s> Rp60.000 </span>
+              <a href="#">Weekend Deal B</a><span> <s>75.000</s> Rp60.000 </span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              3pcs Aroma Chicken + 2pcs Nasi
             </div>
           </div>
 
@@ -485,7 +485,7 @@
               <a href="#">Frozen Premium Bulgogi & Soy Honey</a><span> <s>99.000</s> Rp74.000 </span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              Potongan 25%
             </div>
           </div>
 	  <div class="col-lg-6 menu-item filter-pocha">
@@ -493,7 +493,7 @@
               <a href="#">Ricebox Bulgolgi + Soy Honey + Crispy Chicken</a><span> <s>50.000</s> Rp38.000 </span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              Potongan 24%
             </div>
           </div>
 		
