--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
+          <li><a class="nav-link scrollto active" href="#hero">Beranda</a></li>
           <li><a class="nav-link scrollto" href="#about">Tentang</a></li>
           <li><a class="nav-link scrollto" href="#specials">Promo Spesial Event</a></li>
           <li><a class="nav-link scrollto" href="#gallery">Galeri</a></li>
