--- a/menu.html
+++ b/menu.html
@@ -41,7 +41,7 @@
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a class="nav-link scrollto" href="index.html">Home</a></li>
+          <li><a class="nav-link scrollto" href="index.html">Beranda</a></li>
           <li><a class="nav-link scrollto" href="index.html">Tentang</a></li>
           <li><a class="nav-link scrollto" href="index.html">Promo Spesial Event</a></li>
           <li><a class="nav-link scrollto" href="index.html">Galeri</a></li>
