--- a/index.html
+++ b/index.html
@@ -371,11 +371,12 @@
       <!--<div class="map">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d32654820.88251219!2d117.88879999999999!3d-2.4456499999999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2c4c07d7496404b7%3A0xe37b4de71badf485!2sIndonesia!5e0!3m2!1sen!2sid!4v1664171492442!5m2!1sen!2sid" width="100%" height="350px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>-->
-	    
+	 
     </section><!-- End Gallery Section -->
 	
+	<div class="text-center"><a class="logo me-auto">⠀⠀⠀⠀⠀⠀</a></div>
 	<!-- ======= Map ======= -->
-		        <div id="map">
+	<div id="map">
         </div>
         <script src="js/qgis2web_expressions.js"></script>
         <script src="js/leaflet.js"></script>
@@ -1211,6 +1212,7 @@
         });
 		</script>
 	<!-- ======= End Map ======= -->
+	<div class="text-center"><a class="logo me-auto">⠀⠀⠀⠀⠀⠀</a></div>
 	
   </main><!-- End #main -->
 
