--- a/index.html
+++ b/index.html
@@ -365,6 +365,39 @@
               </a>
             </div>
           </div>
+		
+          <div class="col-lg-3 col-md-4">
+            <div class="gallery-item">
+              <a href="assets/img/gallery/gallery-9.jpg" class="gallery-lightbox">
+                <img src="assets/img/gallery/gallery-9.jpg" alt="" class="img-fluid">
+              </a>
+            </div>
+          </div>
+		
+          <div class="col-lg-3 col-md-4">
+            <div class="gallery-item">
+              <a href="assets/img/gallery/gallery-10.jpg" class="gallery-lightbox">
+                <img src="assets/img/gallery/gallery-10.jpg" alt="" class="img-fluid">
+              </a>
+            </div>
+          </div>
+
+	<div class="col-lg-3 col-md-4">
+            <div class="gallery-item">
+              <a href="assets/img/gallery/gallery-11.jpg" class="gallery-lightbox">
+                <img src="assets/img/gallery/gallery-11.jpg" alt="" class="img-fluid">
+              </a>
+            </div>
+          </div>
+		
+	<div class="col-lg-3 col-md-4">
+            <div class="gallery-item">
+              <a href="assets/img/gallery/gallery-12.jpg" class="gallery-lightbox">
+                <img src="assets/img/gallery/gallery-12.jpg" alt="" class="img-fluid">
+              </a>
+            </div>
+          </div>
+		
         </div>
       </div>
 	    
